# ansible-role-base

./: .ansible-lint  .pre-commit-config.yaml  .yamllint  LICENSE  pyproject.toml  readme.md
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml
defaults/: main.yml
handlers/: main.yml  restart_sshd.yml
meta/: main.yml
molecule/default/: converge.yml  molecule.yml  prepare.yml  verify.yml
tasks/: basic-setup.yml  fail2ban.yml  hostname.yml  lockdown-ssh.yml  lockdown-ufw.yml  main.yml  reboot.yml  users.yml
templates/: fail2ban.local.j2
