[project]
name = "ansible-role-base"
version = "0.1.0"
description = "Ansible Role for Base Configuration"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ansible>=10.0.0",
    "ansible-lint>=6.16",
    "molecule>=24.12.0",
    "molecule-docker>=2.1.0",
    "pre-commit>=4.2.0",
]
